--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Hayalinizdeki düğünü birlikte tasarlayalım</h2>
         <p>Özenle seçilmiş mekanlar, gerçek düğün hikâyeleri ve ilham veren görseller. Planlamadan önce fikir almak için doğru yerdesiniz.</p>
         <p>
-          <a class="btn-primary" href="#mekanlar">Mekanları Gör</a>
+          <a class="btn-primary" href="hizmetler.html">Hizmetlerr</a>
         </p>
       </div>
 
@@ -349,3 +349,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
