--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <a href="#hizmetler">Hizmetler</a>
         <a href="#galeri">Galeri</a>
         <a href="#iletisim">İletişim</a>
-        <a class="admin-btn" href="admin-login.html">Admin Girişi</a>
          <a class="admin-btn" href="blog.html">Blog</a>
       </nav>
 
@@ -135,20 +134,20 @@ if (savedGallery.length) {
     <div class="wrap">
       <ul class="category-list">
         <li class="cat-item">
-          <h3>Bahçe Mekanları</h3>
-          <p>Doğayla iç içe, rustik ve romantik seçenekler.</p>
+          <h3>Düğün</h3>
+          <p>Yazılar düzenlenicek</p>
         </li>
         <li class="cat-item">
-          <h3>Teras & Çatı</h3>
-          <p>Şehir manzaralı, gün batımıyla unutulmaz anlar.</p>
+          <h3>Toplantı</h3>
+          <p>Yazılar düzenlenicek</p>
         </li>
         <li class="cat-item">
-          <h3>Salon & Kokteyl</h3>
-          <p>Kapalı ve şık organizasyonlar için ideal.</p>
+          <h3>İsteğe bağlı organizasyon</h3>
+          <p>Yazılar düzenlenicek</p>
         </li>
         <li class="cat-item">
-          <h3>Mini Düğün</h3>
-          <p>Samimi davetler, az kişiyle büyük hisler.</p>
+          <h3>Menü</h3>
+          <p>Yazılar düzenlenicek</p>
         </li>
       </ul>
     </div>
@@ -208,16 +207,16 @@ if (savedGallery.length) {
       <h3>Hizmet Sağlayıcılar</h3>
       <div class="service-row">
         <div class="service">
-          <h4>Organizasyon</h4>
-          <p>Deneyimli ekiplerle baştan sona destek.</p>
+          <h4>Düğün</h4>
+          <p>Yazılar düzenlenicek</p>
         </div>
         <div class="service">
-          <h4>Fotoğraf & Video</h4>
-          <p>Profesyonel paketler, drone çekimleri.</p>
+          <h4>Toplantı</h4>
+          <p>Yazılar düzenlenicek</p>
         </div>
         <div class="service">
-          <h4>Çiçek & Dekor</h4>
-          <p>Sezonluk tasarımlar ve kişiye özel uyarlamalar.</p>
+          <h4>İsteğe bağlı organizasyon</h4>
+          <p>Yazılar düzenlenicek</p>
         </div>
       </div>
     </div>
@@ -351,5 +350,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
