--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <nav class="main-nav" aria-label="Ana menü">
         <a href="#anasayfa">Anasayfa</a>
-        <a href="#mekanlar">Mekanlar</a>
+        <a href="mekanlar.html">Mekanlar</a>
         <a href="#hizmetler">Hizmetler</a>
         <a href="#galeri">Galeri</a>
         <a href="#iletisim">İletişim</a>
@@ -350,6 +350,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
