--- a/mekanlar.html
+++ b/mekanlar.html
@@ -8,12 +8,16 @@
   <link rel="icon" href="assets/logo.png">
   <style>
     /* Ek özel stil dokunuşları */
-    .page-hero {
-      background: url("img/hero-mekan.jpg") center/cover no-repeat;
-      color: #fff;
-      text-align: center;
-      padding: 100px 20px;
-    }
+.page-hero {
+  background: 
+    linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+    url("img/pink-texture.jpg") center/cover no-repeat;
+  color: #fff;
+  text-align: center;
+  padding: 100px 20px;
+  background-attachment: fixed;
+}
+
 
     .page-hero h2 {
       font-size: 2.2rem;
