--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
       <nav class="main-nav" aria-label="Ana menü">
         <a href="#anasayfa">Anasayfa</a>
         <a href="mekanlar.html">Mekanlar</a>
-        <a href="#hizmetler">Hizmetler</a>
-        <a href="#galeri">Galeri</a>
-        <a href="#iletisim">İletişim</a>
-         <a class="admin-btn" href="blog.html">Blog</a>
+        <a href="hizmetler.html">Hizmetler</a>
+        <a href="galeri.html">Galeri</a>
+        <a href="hakkımızda.html">Hakkımızda</a>
       </nav>
 
       <button class="burger" aria-label="Menüyü aç">☰</button>
@@ -350,6 +349,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
