--- a/hizmetler.html
+++ b/hizmetler.html
@@ -12,7 +12,7 @@
     .page-hero {
       background: 
         linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-        url("img/hizmetler-bg.jpg") center/cover no-repeat;
+        url("img/pembe.jpg") center/cover no-repeat;
       color: #fff;
       text-align: center;
       padding: 100px 20px;
