--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -30,18 +30,20 @@
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="hero hakkimizda-hero">
-    <div class="wrap hero-inner">
-      <div class="hero-text">
-        <h2>Hayal Garden Hakkında</h2>
-        <p>Hayal Garden, düğün ve etkinlik planlamanızı kolaylaştırmak için tasarlanmış, yaratıcı ve güvenilir bir rehberdir.</p>
-      </div>
-      <div class="hero-image">
-        <img src="img/logo-yani.png" alt="Hayal Garden" loading="lazy">
-      </div>
+ <!-- HERO -->
+<section class="hero hakkimizda-hero">
+  <div class="wrap hero-inner">
+    <div class="hero-text">
+      <h2>Hayal Garden</h2>
+      <p>Hayalinizdeki düğün ve etkinlikleri gerçeğe dönüştürmek için yaratıcı ve güvenilir bir rehber.</p>
+      <a href="iletisim.html" class="btn-primary">Bize Ulaş</a>
     </div>
-  </section>
+    <div class="hero-image">
+      <img src="img/logo-yani.png" alt="Hayal Garden" loading="lazy">
+    </div>
+  </div>
+</section>
+
 
   <!-- HİKAYE / TIMELINE -->
   <section class="section light story-section">
